--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style/slick.css">
     <link rel="stylesheet" href="style/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 </head>
     <body>
       <header>
@@ -185,13 +187,53 @@
         
           <section class="main">
 
-            <div style="height: 1000px;" class="container-fluid bg-danger">Ahoj</div>
+            <div style="height: 1000px;" class="container-fluid bg-danger"><div class="slider">
+              <div class="container">
+                <div class="row slick_slide">
+  
+                  <div class="col-3">
+                    <div class="team">
+                      <img src="images/tricko.jpg" alt="" class="img-fluid">
+                      <h5>Pekne Tricko</h5>
+                      <p>Fakt pekne</p>
+                    </div>
+                  </div>
+  
+                  <div class="col-3">
+                    <div class="team">
+                      <img src="images/tricko.jpg" alt="" class="img-fluid">
+                      <h5>Pekne Tricko</h5>
+                      <p>Fakt pekne</p>
+                    </div>
+                  </div>
+  
+                  <div class="col-3">
+                    <div class="team">
+                      <img src="images/tricko.jpg" alt="" class="img-fluid">
+                      <h5>Pekne Tricko</h5>
+                      <p>Fakt pekne</p>
+                    </div>
+                  </div>
+  
+                  <div class="col-3">
+                    <div class="team">
+                      <img src="images/tricko.jpg" alt="" class="img-fluid">
+                      <h5>Pekne Tricko</h5>
+                      <p>Fakt pekne</p>
+                    </div>
+                  </div>
+  
+                </div>
+              </div>
+            </div></div>
+            
           </section> 
       </main>
       <footer style="background-color: pink; height: 60px;">
         Nieco
       </footer>
       <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+      <script src="script/slick.min.js"></script>
       <script src="script/index.js"></script>
     </body>
 </html>
