--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <div class="row">
               <div class="col-4 mt-3">
                 <ul class="multi-column-dropdown">
-                  <li><span>Oblečenie</span></li>
-                  <li class="divider"><hr></li>                            
+                  <span style="display: block; text-align: center;">Oblečenie</span>
+                  <hr>                        
                   <li><a href="#">Bundy</a></li>
                   <li><a href="#">Šaty</a></li>
                   <li><a href="#">Tričká</a></li>
@@ -94,8 +94,8 @@
               </div>
               <div class="col-4 mt-3">
                 <ul class="multi-column-dropdown">
-                  <li><span>Topánky</span></li>
-                  <li class="divider"><hr></li>     
+                  <span style="display: block; text-align: center;">Topánky</span>
+                  <hr>     
                   <li><a href="#">Tenisky</a></li>
                   <li><a href="#"></a></li>
                   <li><a href="#">Športové</a></li>
@@ -104,8 +104,8 @@
               </div>
               <div class="col-4 mt-3">
                 <ul class="multi-column-dropdown">
-                  <li><span>Doplnky</span></li>
-                  <li class="divider"><hr></li>     
+                  <span style="display: block; text-align: center;">Doplnky</span>
+                  <hr>    
                   <li><a href="#">Hodinky</a></li>
                   <li><a href="#">Šály</a></li>
                   <li><a href="#">Čiapky</a></li>
@@ -118,8 +118,8 @@
             <div class="row">
               <div class="col-4 mt-3">
                 <ul class="multi-column-dropdown">
-                  <li><span>Oblečenie</span></li>
-                  <li class="divider"><hr></li>                            
+                  <span style="display: block; text-align: center;">Oblečenie</span>
+                  <hr>                           
                   <li><a href="#">Bundy</a></li>
                   <li><a href="#">Obleky</a></li>
                   <li><a href="#">Tričká</a></li>
@@ -128,8 +128,8 @@
               </div>
               <div class="col-4 mt-3">
                 <ul class="multi-column-dropdown">
-                  <li><span>Topánky</span></li>
-                  <li class="divider"><hr></li>     
+                  <span style="display: block; text-align: center;">Topánky</span>
+                  <hr>    
                   <li><a href="#">Tenisky</a></li>
                   <li><a href="#"></a></li>
                   <li><a href="#">Športové</a></li>
@@ -138,8 +138,8 @@
               </div>
               <div class="col-4 mt-3">
                 <ul class="multi-column-dropdown">
-                  <li><span>Doplnky</span></li>
-                  <li class="divider"><hr></li>
+                  <span style="display: block; text-align: center;">Doplnky</span>
+                  <hr>
                   <li><a href="#">Hodinky</a></li>
                   <li><a href="#">Šály</a></li>
                   <li><a href="#">Čiapky</a></li>
@@ -152,8 +152,8 @@
             <div class="row">
               <div class="col-4 mt-3">
                 <ul class="multi-column-dropdown">
-                  <li><span>Oblečenie</span></li>
-                  <li class="divider"><hr></li>                            
+                  <span style="display: block; text-align: center;">Oblečenie</span>
+                  <hr>                         
                   <li><a href="#">Bundy</a></li>
                   <li><a href="#">Šaty</a></li>
                   <li><a href="#">Tričká</a></li>
@@ -162,8 +162,8 @@
               </div>
               <div class="col-4 mt-3">
                 <ul class="multi-column-dropdown">
-                  <li><span>Topánky</span></li>
-                  <li class="divider"><hr></li>     
+                  <span style="display: block; text-align: center;">Topánky</span>
+                  <hr>   
                   <li><a href="#">Tenisky</a></li>
                   <li><a href="#"></a></li>
                   <li><a href="#">Športové</a></li>
@@ -172,8 +172,8 @@
               </div>
               <div class="col-4 mt-3">
                 <ul class="multi-column-dropdown">
-                  <li><span>Doplnky</span></li>
-                  <li class="divider"><hr></li>     
+                  <span style="display: block; text-align: center;">Doplnky</span>
+                  <hr>  
                   <li><a href="#">Hodinky</a></li>
                   <li><a href="#">Šály</a></li>
                   <li><a href="#">Čiapky</a></li>
