Dokoncenie product page

--- a/product.html
+++ b/product.html
@@ -353,7 +353,7 @@
                                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                                                 <label class="form-check-label" for="flexRadioDefault1">
                                                     <div class="color" style="background-color:salmon"></div>
-                                                  </label>
+                                                </label>
                                             </div>
                                         </div>
                                     </div>
@@ -363,9 +363,11 @@
                         
                         <div class="row counter_row">
                             <div class="qty mt-5">
-                                <span class="minus bg-dark ms-3">-</span>
-                                <input type="number" class="count" name="qty" value="1">
-                                <span class="plus bg-dark">+</span>
+                                <div class="counter_div">
+                                  <span class="minus bg-dark ms-3">-</span>
+                                  <input type="number" class="count" name="qty" value="1">
+                                  <span class="plus bg-dark">+</span>
+                                </div>
                                 <button class="col-7 ms-3 btn btn-outline-success add-cart">
                                     <i class="bi bi-cart-plus">Pridat do kosika</i>
                                 </button>
@@ -380,7 +382,7 @@
             <div class="row">
                 <h2 class="mt-5 mb-4 h2-header">Popis</h2>
                 <div class="p-description">
-                    <p class="mx-5">Bundy sú oblečenie navrhnuté na to, aby ochránili človeka pred chladom a inými nepriaznivými poveternostnými podmienkami. Zvyčajne sa vyrábajú z rôznych druhov materiálov, ako napríklad z kože, syntetických vlákien alebo z rôznych druhov tkanín. Väčšinou majú vo vnútri nejakú izoláciu, ktorá pomáha udržiavať teplo v tele, a vonkajší povrch im umožňuje odolávať vetru a vode.
+                    <p class="mx-5 mt-3">Bundy sú oblečenie navrhnuté na to, aby ochránili človeka pred chladom a inými nepriaznivými poveternostnými podmienkami. Zvyčajne sa vyrábajú z rôznych druhov materiálov, ako napríklad z kože, syntetických vlákien alebo z rôznych druhov tkanín. Väčšinou majú vo vnútri nejakú izoláciu, ktorá pomáha udržiavať teplo v tele, a vonkajší povrch im umožňuje odolávať vetru a vode.
                         <br>
                         <br>
                         Bundy môžu byť rôznych typov a štýlov, od krátkych a ľahkých bundičiek až po ťažké parky s kapucňou. Niektoré bundy majú zipsy alebo gombíky, zatiaľ čo iné majú suchý zips, ktorý sa využíva na uzavretie. Môžu mať rôzne vrecká a kapsy na rukách, na hrudi alebo na vnútornej strane bundy.
@@ -388,14 +390,14 @@
                 </div>
                 <h2 class="mt-5 mb-4 h2-header">Detaily</h2>
                 <div class="row mb-5 details">
-                    <div class="col-md-6 p-description">
+                    <div class="col-md-6 pt-3 p-description">
                         <ul>
                             <li>List item 1</li>
                             <li>List item 2</li>
                             <li>List item 3</li>
                         </ul>
                     </div>
-                    <div class="col-md-6 p-description">
+                    <div class="col-md-6 pt-3 p-description">
                         <ul>
                             <li>List item 4</li>
                             <li>List item 5</li>
