Pridanie a úprava nových html

--- a/order_shipping_payment_page.html
+++ b/order_shipping_payment_page.html
@@ -245,7 +245,7 @@
     <div class="container-fluid">
       <div class="row nadpis_row">
         <h4 class="mt-3 mb-3">Môj košík / Výber spôsob dopravy a platby / <strong>Fakturačne a dodacie údaje</strong> /
-          Dokončenie</h4>
+          Dokončenie objednávky</h4>
         <h2 class="mt-3 mb-3">Fakturačne a dodacie údaje</h2>
       </div>
       <div class="row fakturacne_row">
@@ -344,13 +344,14 @@
       </div>
       <div class="row buttony">
         <div class="col-6">
-          <button class="btn btn-primary px-3 order_button" type="submit">
+          <button class="btn btn-primary px-3 order_button" type="submit"
+            onclick="window.location.href='transport_payment.html'">
             <i class="bi bi-backspace"></i> Späť k doprave a platbe
           </button>
         </div>
         <div class="col-6">
           <button class="btn btn-primary px-3 order_button" type="submit"
-            onclick="window.location.href='landing_page.html'">
+            onclick="window.location.href='delivery_data_page.html'">
             <i class="bi bi-bag-check"></i> Dokončenie objednávky
           </button>
         </div>
