--- a/shopping_card_page.html
+++ b/shopping_card_page.html
@@ -23,11 +23,11 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-light p-0">
       <div class="container-fluid">
-          <div class="col-md-1 col-2 me-">
-            <a href="landing_page.html">
-              <img class="navbar-brand  text-center" src="images/wtech_logo.png">
-            </a>
-          </div>
+        <div class="col-md-1 col-2 me-">
+          <a href="landing_page.html">
+            <img class="navbar-brand  text-center" src="images/wtech_logo.png">
+          </a>
+        </div>
         <div class="button_class_mobil pe-2">
           <a href="shopping_card_page.html">
             <button class="btn btn-outline-success">
@@ -243,6 +243,10 @@
 
   <main>
     <section class="main">
+      <button class="btn btn-primary px-3 data_button" type="submit"
+        onclick="window.location.href='transport_payment.html'">
+        <i class="bi bi-bag-check"></i> Výber spôsob dopravy a platby
+      </button>
     </section>
   </main>
 
