--- a/shopping_cart_page.html
+++ b/shopping_cart_page.html
@@ -11,7 +11,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style/style_main.css">
-  <link rel="stylesheet" href="style/style_shoppingcard_page.css">
+  <link rel="stylesheet" href="style/style_shopping_cart_page.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
@@ -242,8 +242,143 @@
   </header>
 
   <main>
-    <section class="main">
-    </section>
+    <div class="container-fluid">
+      <div class="row nadpis_row">
+        <h4 class="mt-3 mb-3"><strong>Môj košík</strong> / Výber spôsob dopravy a platby / Fakturačne a dodacie údaje /
+          Dokončenie</h4>
+        <h2 class="mt-3 mb-3">Môj košík</h2>
+      </div>
+    </div>
+    <div class="container-fluid mb-4 card_container">
+
+      <div class="row remove_btn_row">
+        <button type="button" class="btn btn-danger">
+          <i class="bi bi-x-circle-fill"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-4">
+              <img src="images/product1.png" alt="">
+            </div>
+            <div class="col-8">
+              <div class="row">
+                <h4>Nazov produktu</h4>
+              </div>
+              <div class="row h-100">
+                <div class="col-4 velkost">
+                  <h5>Velkost</h5>
+                  <h5>Farba</h5>
+                </div>
+                <div class="col-4 counter_btn">
+                  <div class="counter_div">
+                    <span class="minus bg-dark ms-3">-</span>
+                    <input type="number" class="count" name="qty" value="1">
+                    <span class="plus bg-dark">+</span>
+                  </div>
+                </div>
+                <div class="col-4 cena">
+                  <h3>Cena</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid mb-4 card_container">
+      <div class="row remove_btn_row">
+        <button type="button" class="btn btn-danger">
+          <i class="bi bi-x-circle-fill"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-4">
+              <img src="images/product1.png" alt="">
+            </div>
+            <div class="col-8">
+              <div class="row">
+                <h4>Nazov produktu</h4>
+              </div>
+              <div class="row h-100">
+                <div class="col-4 velkost">
+                  <h5>Velkost</h5>
+                  <h5>Farba</h5>
+                </div>
+                <div class="col-4 counter_btn">
+                  <div class="counter_div">
+                    <span class="minus bg-dark ms-3">-</span>
+                    <input type="number" class="count" name="qty" value="1">
+                    <span class="plus bg-dark">+</span>
+                  </div>
+                </div>
+                <div class="col-4 cena">
+                  <h3>Cena</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid mb-4 card_container">
+
+      <div class="row remove_btn_row">
+        <button type="button" class="btn btn-danger">
+          <i class="bi bi-x-circle-fill"></i>
+        </button>
+      </div>
+      <div class="row">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-4">
+              <img src="images/product1.png" alt="">
+            </div>
+            <div class="col-8">
+              <div class="row">
+                <h4>Nazov produktu</h4>
+              </div>
+              <div class="row h-100">
+                <div class="col-4 velkost">
+                  <h5>Velkost</h5>
+                  <h5>Farba</h5>
+                </div>
+                <div class="col-4 counter_btn">
+                  <div class="counter_div">
+                    <span class="minus bg-dark ms-3">-</span>
+                    <input type="number" class="count" name="qty" value="1">
+                    <span class="plus bg-dark">+</span>
+                  </div>
+                </div>
+                <div class="col-4 cena">
+                  <h3>Cena</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid finish_div">
+      <div class="row">
+        <div class="col-6">
+          <h2>Cena</h2>
+        </div>
+        <div class="col-6 finish_btn">
+          <button class="btn btn-primary px-3 order_button" type="submit"
+            onclick="window.location.href='landing_page.html'">
+            <i class="bi bi-bag-check"></i> Dokončenie objednávky
+          </button>
+        </div>
+      </div>
+    </div>
   </main>
 
   <footer class="container-fluid">
@@ -288,5 +423,5 @@
     integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="script/navbar.js"></script>
-
+  <script src="script/script_shopping_card.js"></script>
 </body>
