--- a/delivery_data_page.html
+++ b/delivery_data_page.html
@@ -30,7 +30,7 @@
           </a>
         </div>
         <div class="button_class_mobil pe-2">
-          <a href="shopping_card_page.html">
+          <a href="shopping_cart_page.html">
             <button class="btn btn-outline-success">
               <span class="bi bi-cart">
                 <span class="d-none">Nákupný košík</span>
@@ -78,7 +78,7 @@
             </i></button>
         </form>
         <div class="button_class">
-          <a href="shopping_card_page.html">
+          <a href="shopping_cart_page.html">
             <button class="btn btn-outline-success">
               <span class="bi bi-cart">
                 <span class="button_spans">Košík</span>
