--- a/order_shipping_payment_page.html
+++ b/order_shipping_payment_page.html
@@ -29,7 +29,7 @@
           </a>
         </div>
         <div class="button_class_mobil pe-2">
-          <a href="shopping_card_page.html">
+          <a href="shopping_cart_page.html">
             <button class="btn btn-outline-success">
               <span class="bi bi-cart">
                 <span class="d-none">Nákupný košík</span>
@@ -77,7 +77,7 @@
             </i></button>
         </form>
         <div class="button_class">
-          <a href="shopping_card_page.html">
+          <a href="shopping_cart_page.html">
             <button class="btn btn-outline-success">
               <span class="bi bi-cart">
                 <span class="button_spans">Košík</span>
