--- a/shopping_cart_page.html
+++ b/shopping_cart_page.html
@@ -29,7 +29,7 @@
             </a>
           </div>
         <div class="button_class_mobil pe-2">
-          <a href="shopping_card_page.html">
+          <a href="shopping_cart_page.html">
             <button class="btn btn-outline-success">
               <span class="bi bi-cart">
                 <span class="d-none">Nákupný košík</span>
@@ -77,7 +77,7 @@
             </i></button>
         </form>
         <div class="button_class">
-          <a href="shopping_card_page.html">
+          <a href="shopping_cart_page.html">
             <button class="btn btn-outline-success">
               <span class="bi bi-cart">
                 <span class="button_spans">Košík</span>
@@ -373,7 +373,7 @@
         </div>
         <div class="col-6 finish_btn">
           <button class="btn btn-primary px-3 order_button" type="submit"
-            onclick="window.location.href='landing_page.html'">
+            onclick="window.location.href='transport_payment.html'">
             <i class="bi bi-bag-check"></i> Dokončenie objednávky
           </button>
         </div>
@@ -423,5 +423,5 @@
     integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="script/navbar.js"></script>
-  <script src="script/script_shopping_card.js"></script>
+  <script src="script/script_shopping_cart.js"></script>
 </body>
