--- a/transport_payment.html
+++ b/transport_payment.html
@@ -29,7 +29,7 @@
                     </a>
                 </div>
                 <div class="button_class_mobil pe-2">
-                    <a href="shopping_card_page.html">
+                    <a href="shopping_cart_page.html">
                         <button class="btn btn-outline-success">
                             <span class="bi bi-cart">
                                 <span class="d-none">Nákupný košík</span>
@@ -78,7 +78,7 @@
                         </i></button>
                 </form>
                 <div class="button_class">
-                    <a href="shopping_card_page.html">
+                    <a href="shopping_cart_page.html">
                         <button class="btn btn-outline-success">
                             <span class="bi bi-cart">
                                 <span class="button_spans">Košík</span>
@@ -316,7 +316,7 @@
             <div class="row mt-3 buttony">
                 <div class="col-5 first_btn">
                     <button class="btn btn-primary px-3 data_button" type="submit"
-                        onclick="window.location.href='shopping_card_page.html'">
+                        onclick="window.location.href='shopping_cart_page.html'">
                         <i class="bi bi-bag-check"></i> Naspäť do košíka
                 </div>
                 <div class="col-5 second_btn">
