--- a/shopping_cart_page.html
+++ b/shopping_cart_page.html
@@ -249,122 +249,125 @@
         <h2 class="mt-3 mb-3">Môj košík</h2>
       </div>
     </div>
-    <div class="container-fluid mb-4 card_container">
+    <div class="container-fluid obsah_container">
+      <div class="container-fluid mb-4 card_container">
 
-      <div class="row remove_btn_row">
-        <button type="button" class="btn btn-danger">
-          <i class="bi bi-x-circle-fill"></i>
-        </button>
-      </div>
-      <div class="row">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-4">
-              <img src="images/product1.png" alt="">
-            </div>
-            <div class="col-8">
-              <div class="row">
-                <h4>Nazov produktu</h4>
+        <div class="row remove_btn_row">
+          <button type="button" class="btn btn-danger">
+            <i class="bi bi-x-circle-fill"></i>
+          </button>
+        </div>
+        <div class="row">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-2">
+                <img src="images/product1.png" alt="">
               </div>
-              <div class="row h-100">
-                <div class="col-4 velkost">
-                  <h5>Velkost</h5>
-                  <h5>Farba</h5>
+              <div class="col-10">
+                <div class="row">
+                  <h4>Nazov produktu</h4>
                 </div>
-                <div class="col-4 counter_btn">
-                  <div class="counter_div">
-                    <span class="minus bg-dark ms-3">-</span>
-                    <input type="number" class="count" name="qty" value="1">
-                    <span class="plus bg-dark">+</span>
+                <div class="row h-100">
+                  <div class="col-4 velkost">
+                    <h5>Velkost</h5>
+                    <h5>Farba</h5>
+                  </div>
+                  <div class="col-4 counter_btn">
+                    <div class="counter_div">
+                      <span class="minus bg-dark ms-3">-</span>
+                      <input type="number" class="count" name="qty" value="1">
+                      <span class="plus bg-dark">+</span>
+                    </div>
+                  </div>
+                  <div class="col-4 cena">
+                    <h3>Cena</h3>
                   </div>
                 </div>
-                <div class="col-4 cena">
-                  <h3>Cena</h3>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid mb-4 card_container">
+        <div class="row remove_btn_row">
+          <button type="button" class="btn btn-danger">
+            <i class="bi bi-x-circle-fill"></i>
+          </button>
+        </div>
+        <div class="row">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-2">
+                <img src="images/product1.png" alt="">
+              </div>
+              <div class="col-10">
+                <div class="row">
+                  <h4>Nazov produktu</h4>
+                </div>
+                <div class="row h-100">
+                  <div class="col-4 velkost">
+                    <h5>Velkost</h5>
+                    <h5>Farba</h5>
+                  </div>
+                  <div class="col-4 counter_btn">
+                    <div class="counter_div">
+                      <span class="minus bg-dark ms-3">-</span>
+                      <input type="number" class="count" name="qty" value="1">
+                      <span class="plus bg-dark">+</span>
+                    </div>
+                  </div>
+                  <div class="col-4 cena">
+                    <h3>Cena</h3>
+                  </div>
                 </div>
               </div>
             </div>
+  
           </div>
-
+        </div>
+      </div>
+      <div class="container-fluid mb-4 card_container">
+  
+        <div class="row remove_btn_row">
+          <button type="button" class="btn btn-danger">
+            <i class="bi bi-x-circle-fill"></i>
+          </button>
+        </div>
+        <div class="row">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-2">
+                <img src="images/product1.png" alt="">
+              </div>
+              <div class="col-10">
+                <div class="row">
+                  <h4>Nazov produktu</h4>
+                </div>
+                <div class="row h-100">
+                  <div class="col-4 velkost">
+                    <h5>Velkost</h5>
+                    <h5>Farba</h5>
+                  </div>
+                  <div class="col-4 counter_btn">
+                    <div class="counter_div">
+                      <span class="minus bg-dark ms-3">-</span>
+                      <input type="number" class="count" name="qty" value="1">
+                      <span class="plus bg-dark">+</span>
+                    </div>
+                  </div>
+                  <div class="col-4 cena">
+                    <h3>Cena</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+          </div>
         </div>
       </div>
     </div>
-    <div class="container-fluid mb-4 card_container">
-      <div class="row remove_btn_row">
-        <button type="button" class="btn btn-danger">
-          <i class="bi bi-x-circle-fill"></i>
-        </button>
-      </div>
-      <div class="row">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-4">
-              <img src="images/product1.png" alt="">
-            </div>
-            <div class="col-8">
-              <div class="row">
-                <h4>Nazov produktu</h4>
-              </div>
-              <div class="row h-100">
-                <div class="col-4 velkost">
-                  <h5>Velkost</h5>
-                  <h5>Farba</h5>
-                </div>
-                <div class="col-4 counter_btn">
-                  <div class="counter_div">
-                    <span class="minus bg-dark ms-3">-</span>
-                    <input type="number" class="count" name="qty" value="1">
-                    <span class="plus bg-dark">+</span>
-                  </div>
-                </div>
-                <div class="col-4 cena">
-                  <h3>Cena</h3>
-                </div>
-              </div>
-            </div>
-          </div>
 
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid mb-4 card_container">
-
-      <div class="row remove_btn_row">
-        <button type="button" class="btn btn-danger">
-          <i class="bi bi-x-circle-fill"></i>
-        </button>
-      </div>
-      <div class="row">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-4">
-              <img src="images/product1.png" alt="">
-            </div>
-            <div class="col-8">
-              <div class="row">
-                <h4>Nazov produktu</h4>
-              </div>
-              <div class="row h-100">
-                <div class="col-4 velkost">
-                  <h5>Velkost</h5>
-                  <h5>Farba</h5>
-                </div>
-                <div class="col-4 counter_btn">
-                  <div class="counter_div">
-                    <span class="minus bg-dark ms-3">-</span>
-                    <input type="number" class="count" name="qty" value="1">
-                    <span class="plus bg-dark">+</span>
-                  </div>
-                </div>
-                <div class="col-4 cena">
-                  <h3>Cena</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
 
     <div class="container-fluid finish_div">
       <div class="row">
