--- a/admin_add_product_page.html
+++ b/admin_add_product_page.html
@@ -127,6 +127,46 @@
               <div class="col col-lg-6 d-flex justify-content-center align-items-center">
                 <div class="form-group mb-4">
                   <div class="col mb-2">
+                    <label for="colorPicker">Kategória produktu</label>
+                  </div>
+                  <select class="selectpicker border-dark" id="categoryPicker" title="Kategória" aria-label="size 3 select example">
+                    <option value="men" data-content="Muži"></option>
+                    <option value="women" data-content="Ženy"></option>
+                    <option value="kids" data-content="Deti"></option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="col col-lg-6 d-flex justify-content-center align-items-center">
+                <div class="form-group mb-4">
+                  <div class="col mb-2">
+                    <label for="categoryPicker">Podkategória produktu</label>
+                  </div>
+                  <select class="selectpicker border-dark" data-size="10" id="subCategoryPicker" title="Podkategória" aria-label="size 3 select example">
+                    <option value="jacket" data-content="Bundy"></option>
+                    <option value="dress" data-content="Šaty"></option>
+                    <option value="shirt" data-content="Tričká"></option>
+                    <option value="trousers" data-content="Nohavice"></option>
+                    <option value="sneakers" data-content="Tenisky"></option>
+                    <option value="boots" data-content="Čižmy"></option>
+                    <option value="sport_sneakers" data-content="Športová obuv"></option>
+                    <option value="formal_shoes" data-content="Spoločenská obuv"></option>
+                    <option value="cap" data-content="Šiltovky"></option>
+                    <option value="scarf" data-content="Šály"></option>
+                    <option value="hat" data-content="Čiapky"></option>
+                    <option value="glasses" data-content="Okuliare"></option>
+                    <option value="working_shoes" data-content="Pracovné"></option>
+                    <option value="sweatshirt" data-content="Mikiny"></option>
+                    <option value="watches" data-content="Hodinky"></option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col col-lg-6 d-flex justify-content-center align-items-center">
+                <div class="form-group mb-4">
+                  <div class="col mb-2">
                     <label for="colorPicker">Farba</label>
                   </div>
                   <select class="selectpicker border-dark" id="colorPicker" title="Farba" multiple aria-label="size 3 select example">
@@ -147,9 +187,10 @@
               <div class="col col-lg-6 d-flex justify-content-center align-items-center">
                 <div class="form-group mb-4">
                   <div class="col mb-2">
-                    <label for="categoryPicker">Veľkosť</label>
+                    <label for="sizePicker">Veľkosť</label>
                   </div>
-                  <select class="selectpicker border-dark" data-size="10" id="categoryPicker" title="Veľkosť" multiple aria-label="size 3 select example">
+                  <select class="selectpicker border-dark" data-size="10" id="sizePicker" title="Veľkosť" multiple aria-label="size 3 select example">
+                    <option value="4XS" data-content="4XS"></option>
                     <option value="XXXS" data-content="XXXS"></option>
                     <option value="XXS" data-content="XXS"></option>
                     <option value="XS" data-content="XS"></option>
@@ -158,6 +199,11 @@
                     <option value="XL" data-content="XL"></option>
                     <option value="XXL" data-content="XXL"></option>
                     <option value="XXXL" data-content="XXXL"></option>
+                    <option value="4XL" data-content="4XL"></option>
+                    <option value="5XL" data-content="5XL"></option>
+                    <option value="6XL" data-content="6XL"></option>
+                    <option value="7XL" data-content="7XL"></option>
+                    <option value="8XL" data-content="8XL"></option>
                   </select>
                 </div>
               </div>
