--- a/shopping_cart_page.html
+++ b/shopping_cart_page.html
@@ -395,7 +395,7 @@
     </div>
     <hr style="height: 2px; background: white;">
     <div class="row">
-      <div class="col-md-6 col-sm-12">
+      <div class="col-6">
         <span>Socialne siete</span>
         <i class="bi bi-instagram ms-2"></i>
         <i class="bi bi-facebook ms-2"></i>
@@ -403,7 +403,7 @@
         <i class="bi bi-twitter ms-2"></i>
         <i class="bi bi-linkedin ms-2"></i>
       </div>
-      <div class="col-md-6 col-sm-12">
+      <div class="col-6">
         <div class="mb-2">
           <i class="bi bi-geo-alt-fill"><span class="ms-2">Slovensko, Bratislava, 841 01</span></i>
         </div>
@@ -415,7 +415,7 @@
       </div>
     </div>
     <hr style="height: 2px; background: white;">
-    <div class="col-sm-3 col-12 me-">
+    <div class="col-md-3 col-2 me-">
       <a href="landing_page.html">
         <img class="navbar-brand  text-center" src="images/wtech_logo.png">
       </a>
