Pridanie shopping_card

--- a/shopping_cart_page.html
+++ b/shopping_cart_page.html
@@ -20,14 +20,15 @@
 </head>
 
 <body>
+
   <header>
     <nav class="navbar navbar-expand-md navbar-light p-0">
       <div class="container-fluid">
-          <div class="col-md-1 col-2 me-">
-            <a href="landing_page.html">
-              <img class="navbar-brand  text-center" src="images/wtech_logo.png">
-            </a>
-          </div>
+        <div class="col-md-1 col-2 me-">
+          <a href="landing_page.html">
+            <img class="navbar-brand  text-center" src="images/wtech_logo.png">
+          </a>
+        </div>
         <div class="button_class_mobil pe-2">
           <a href="shopping_cart_page.html">
             <button class="btn btn-outline-success">
@@ -242,139 +243,184 @@
   </header>
 
   <main>
-    <div class="container-fluid">
+
+    <div class="container-fluid data_container">
       <div class="row nadpis_row">
         <h4 class="mt-3 mb-3"><strong>Môj košík</strong> / Výber spôsob dopravy a platby / Fakturačne a dodacie údaje /
-          Dokončenie</h4>
+          Dokončenie
+        </h4>
         <h2 class="mt-3 mb-3">Môj košík</h2>
       </div>
     </div>
+
     <div class="container-fluid obsah_container">
       <div class="container-fluid mb-4 card_container">
+        <div class="row remove_btn_row">
+          <button type="button" class="btn btn-danger remove_button">
+            <i class="bi bi-x-circle-fill"></i>
+          </button>
+        </div>
+        <div class="row">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-12 col-md-2">
+                <img src="images/product1.png" alt="">
+              </div>
+              <div class="col-10 mt-3">
+                <div class="row">
+                  <h4>Názov produktu: Mikina GANT</h4>
+                </div>
+                <div class="row">
+                  <div class="col-12 velkost">
+                    <h5>Veľkosť: M</h5>
+                    <h5>Farba: Červená</h5>
+                  </div>
+                  <div class="col-12 col-md-5 cena">
+                    <h3>Cena: 70,53€</h3>
+                  </div>
+                  <div class="col-3 col-md-7 qty">
+                    <div class="counter_btn">
+                      <div class="counter_div">
+                        <span class="minus bg-dark">-</span>
+                        <input type="number" class="count" name="qty" value="1">
+                        <span class="plus bg-dark">+</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class="container-fluid mb-4 card_container">
         <div class="row remove_btn_row">
-          <button type="button" class="btn btn-danger">
+          <button type="button" class="btn btn-danger remove_button">
             <i class="bi bi-x-circle-fill"></i>
           </button>
         </div>
         <div class="row">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-2">
-                <img src="images/product1.png" alt="">
+              <div class="col-12 col-md-2">
+                <img src="images/product2.png" alt="">
               </div>
-              <div class="col-10">
+              <div class="col-10 mt-3">
                 <div class="row">
-                  <h4>Nazov produktu</h4>
+                  <h4>Názov produktu: Mikina Alpha Industries</h4>
                 </div>
-                <div class="row h-100">
-                  <div class="col-4 velkost">
-                    <h5>Velkost</h5>
-                    <h5>Farba</h5>
+                <div class="row">
+                  <div class="col-12 velkost">
+                    <h5>Veľkosť: L</h5>
+                    <h5>Farba: Modrá</h5>
                   </div>
-                  <div class="col-4 counter_btn">
-                    <div class="counter_div">
-                      <span class="minus bg-dark ms-3">-</span>
-                      <input type="number" class="count" name="qty" value="1">
-                      <span class="plus bg-dark">+</span>
+                  <div class="col-12 col-md-5 cena">
+                    <h3>Cena: 39,90€</h3>
+                  </div>
+                  <div class="col-3 col-md-7 qty">
+                    <div class="counter_btn">
+                      <div class="counter_div">
+                        <span class="minus bg-dark">-</span>
+                        <input type="number" class="count" name="qty" value="1">
+                        <span class="plus bg-dark">+</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-4 cena">
-                    <h3>Cena</h3>
                   </div>
                 </div>
               </div>
             </div>
-  
           </div>
         </div>
       </div>
+
       <div class="container-fluid mb-4 card_container">
         <div class="row remove_btn_row">
-          <button type="button" class="btn btn-danger">
+          <button type="button" class="btn btn-danger remove_button">
             <i class="bi bi-x-circle-fill"></i>
           </button>
         </div>
         <div class="row">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-2">
-                <img src="images/product1.png" alt="">
+              <div class="col-12 col-md-2">
+                <img src="images/product4.png" alt="">
               </div>
-              <div class="col-10">
+              <div class="col-10 mt-3">
                 <div class="row">
-                  <h4>Nazov produktu</h4>
+                  <h4>Názov produktu: Prechodná bunda Nike</h4>
                 </div>
-                <div class="row h-100">
-                  <div class="col-4 velkost">
-                    <h5>Velkost</h5>
-                    <h5>Farba</h5>
+                <div class="row">
+                  <div class="col-12 velkost">
+                    <h5>Veľkosť: S</h5>
+                    <h5>Farba: Žltá</h5>
                   </div>
-                  <div class="col-4 counter_btn">
-                    <div class="counter_div">
-                      <span class="minus bg-dark ms-3">-</span>
-                      <input type="number" class="count" name="qty" value="1">
-                      <span class="plus bg-dark">+</span>
+                  <div class="col-12 col-md-5 cena">
+                    <h3>Cena: 69,69€</h3>
+                  </div>
+                  <div class="col-3 col-md-7 qty">
+                    <div class="counter_btn">
+                      <div class="counter_div">
+                        <span class="minus bg-dark">-</span>
+                        <input type="number" class="count" name="qty" value="1">
+                        <span class="plus bg-dark">+</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-4 cena">
-                    <h3>Cena</h3>
                   </div>
                 </div>
               </div>
             </div>
-  
           </div>
         </div>
       </div>
+
       <div class="container-fluid mb-4 card_container">
-  
         <div class="row remove_btn_row">
-          <button type="button" class="btn btn-danger">
+          <button type="button" class="btn btn-danger remove_button">
             <i class="bi bi-x-circle-fill"></i>
           </button>
         </div>
         <div class="row">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-2">
-                <img src="images/product1.png" alt="">
+              <div class="col-12 col-md-2">
+                <img src="images/product5.png" alt="">
               </div>
-              <div class="col-10">
+              <div class="col-10 mt-3">
                 <div class="row">
-                  <h4>Nazov produktu</h4>
+                  <h4>Názov produktu: Šaty Izzie Raere</h4>
                 </div>
-                <div class="row h-100">
-                  <div class="col-4 velkost">
-                    <h5>Velkost</h5>
-                    <h5>Farba</h5>
+                <div class="row">
+                  <div class="col-12 velkost">
+                    <h5>Veľkosť: M</h5>
+                    <h5>Farba: Čierna</h5>
                   </div>
-                  <div class="col-4 counter_btn">
-                    <div class="counter_div">
-                      <span class="minus bg-dark ms-3">-</span>
-                      <input type="number" class="count" name="qty" value="1">
-                      <span class="plus bg-dark">+</span>
+                  <div class="col-12 col-md-5 cena">
+                    <h3>Cena: 75,56€</h3>
+                  </div>
+                  <div class="col-3 col-md-7 qty">
+                    <div class="counter_btn">
+                      <div class="counter_div">
+                        <span class="minus bg-dark">-</span>
+                        <input type="number" class="count" name="qty" value="1">
+                        <span class="plus bg-dark">+</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="col-4 cena">
-                    <h3>Cena</h3>
                   </div>
                 </div>
               </div>
             </div>
-  
           </div>
         </div>
       </div>
     </div>
 
-
     <div class="container-fluid finish_div">
       <div class="row">
-        <div class="col-6">
-          <h2>Cena</h2>
+        <div class="col-12 col-md-6 all_price">
+          <h2>Cena: 255,68€</h2>
         </div>
-        <div class="col-6 finish_btn">
+        <div class="col-12 col-md-6 finish_btn">
           <button class="btn btn-primary px-3 order_button" type="submit"
             onclick="window.location.href='transport_payment.html'">
             <i class="bi bi-bag-check"></i> Dokončenie objednávky
@@ -382,6 +428,7 @@
         </div>
       </div>
     </div>
+
   </main>
 
   <footer class="container-fluid">
@@ -395,7 +442,7 @@
     </div>
     <hr style="height: 2px; background: white;">
     <div class="row">
-      <div class="col-6">
+      <div class="col-md-6 col-sm-12">
         <span>Socialne siete</span>
         <i class="bi bi-instagram ms-2"></i>
         <i class="bi bi-facebook ms-2"></i>
@@ -403,7 +450,7 @@
         <i class="bi bi-twitter ms-2"></i>
         <i class="bi bi-linkedin ms-2"></i>
       </div>
-      <div class="col-6">
+      <div class="col-md-6 col-sm-12">
         <div class="mb-2">
           <i class="bi bi-geo-alt-fill"><span class="ms-2">Slovensko, Bratislava, 841 01</span></i>
         </div>
@@ -415,7 +462,7 @@
       </div>
     </div>
     <hr style="height: 2px; background: white;">
-    <div class="col-md-3 col-2 me-">
+    <div class="col-sm-3 col-12 me-">
       <a href="landing_page.html">
         <img class="navbar-brand  text-center" src="images/wtech_logo.png">
       </a>
