Pridanie novych funkcionalit

--- a/landing_page.html
+++ b/landing_page.html
@@ -85,7 +85,7 @@
             </button>
           </a>
           <a href="#login">
-            <button class="btn btn-outline-success">
+            <button class="btn btn-outline-success" data-target="">
               <span class="bi bi-person">
                 <span class="button_spans">Prihlásenie</span>
               </span>
